2010-06-23  James Robinson  <jamesr@chromium.org>

        Unreviewed.  Add my IRC handle to committers.py so the sheriffbot can yell at me.

        * Scripts/webkitpy/common/config/committers.py:

2010-06-23  Kent Tamura  <tkent@chromium.org>

        Reviewed by Dimitri Glazkov.

        Correct Chromium test configuration
        https://bugs.webkit.org/show_bug.cgi?id=41057

        * BuildSlaveSupport/build.webkit.org-config/master.cfg:
         - Add "--use-drt" option for NRWT. It is required for Chromium and
           ignored for other platforms.
         - Skip JSC test on Chromium
        * BuildSlaveSupport/test-result-archive:
          Add Chromium support.

2010-06-23  Sam Weinig  <sam@webkit.org>

        Reviewed by Anders Carlsson.

        Fix for https://bugs.webkit.org/show_bug.cgi?id=41073
        WebKit2: Flesh out more of the InjectedBundle client API

        * MiniBrowser/mac/WebBundle/WebBundleMain.m:
        (_didStartProvisionalLoadForFrame):
        (_didReceiveServerRedirectForProvisionalLoadForFrame):
        (_didFailProvisionalLoadWithErrorForFrame):
        (_didCommitLoadForFrame):
        (_didFinishLoadForFrame):
        (_didFailLoadWithErrorForFrame):
        (_didReceiveTitleForFrame):
        (_didClearWindowForFrame):
        (_didCreatePage):
        (_willDestroyPage):
        (WKBundleInitialize):

2010-06-23  Yuzo Fujishima  <yuzo@google.com>

        Reviewed by Shinichiro Hamaji.

        Implement page format data programming interface.
        Add methods for testing.
        https://bugs.webkit.org/show_bug.cgi?id=37538

        * DumpRenderTree/LayoutTestController.cpp:
        (parsePageNumber):
        (isPageBoxVisibleCallback):
        (pageAreaRectInPixelsCallback):
        (preferredPageSizeInPixelsCallback):
        (LayoutTestController::staticFunctions):
        * DumpRenderTree/LayoutTestController.h:
        * DumpRenderTree/gtk/LayoutTestControllerGtk.cpp: